--- a/style/main.css
+++ b/style/main.css
@@ -21,14 +21,14 @@ canvas {
   border: 1px solid #000; /* Optional: Add a border to the canvas */
 }
 
-/* .sticky-header {
+.sticky-header {
   background-color: #000;
   color: #fff;
-  padding: 20px;
-  width: 30%; /* Adjust as needed */
-  /* position: sticky;
+  padding: 60px;
+  width: 20%; /* Adjust as needed */
+  position: fixed;
   top: 0;
-} */ */
+}
 
 main {
   flex:1;
@@ -39,13 +39,19 @@ main {
 
 .container {
   display: flex;
-  flex-direction: column; /* Ensure elements are stacked vertically */
-  align-items: center;
-  text-align: center;
+  flex-direction: column;
+  align-items: flex-start; /* Updated to align the container to the left */
+  text-align: left;
+  position: fixed;
+  width: 30%;
+  left: 60px; /* Added left margin of 60px */
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-h1 {
-  margin: 40px 10px; /* Remove default margin for <h1> */
+.container h1 {
+  text-align: left; /* Use text-align instead of float */
+  margin: 0 80px; /* Remove default margin for <p> */
   color: white;
   font-size:100px;
 }
@@ -56,7 +62,7 @@ h1 {
   font-size: 24px; /* Adjust font size as needed */
   line-height: 1.6; /* Adjust line height as needed */
   text-align: left; /* Use text-align instead of float */
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h2 {
