--- a/style/main.css
+++ b/style/main.css
@@ -1,146 +1,95 @@
 body {
-  padding: 20px; /* Add appropriate units, e.g., pixels */
+  padding: 20px;
   margin: 20px;
   background-color: #000;
   font-family: "Gluten", "Open Sans", sans-serif;
   font-style: normal;
-  color:white;
+  color: white;
   font-weight: 300;
   display: flex;
   align-items: top;
   text-align: left;
   justify-content: center;
+  overflow: auto;
 }
 
-
-.sketch-container {
-  text-align: center;
-}
-
-canvas {
-  border: 1px solid #000; /* Optional: Add a border to the canvas */
+.parallax-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto;
+  overscroll-behavior: contain; /* or 'auto' or 'none' */
 }
 
 .sticky-header {
-  background-color: #000;
+  /* background-color: #000; */
   color: #fff;
-  padding: 60px;
-  width: 20%; /* Adjust as needed */
+  padding: 100px;
+  width: 20%;
   position: fixed;
-  top: 0;
+  top: 10;
 }
 
-main {
-  flex:1;
-  padding:20px;
-  height:100vh;
+/* main {
+  flex: 1;
+  padding: 20px;
+  height: 100vh;
   background-color: #000;
-}
+  margin-right: 30%;
+} */
 
 .container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Updated to align the container to the left */
+  align-items: flex-end;
   text-align: left;
   position: fixed;
-  width: 30%;
-  left: 60px; /* Added left margin of 60px */
-  top: 50%;
-  transform: translateY(-50%);
+  width: 30%; /* Adjusted width to 30% */
+  right: 10%; /* Increased right margin to 10% */
+  top: 0;
+  height: 100%;
+  overflow-y: auto; /* Allow scrolling within the container */
+  z-index: 3;
 }
 
-.container h1 {
-  text-align: left; /* Use text-align instead of float */
-  margin: 0 80px; /* Remove default margin for <p> */
+
+.sticky-header h1 {
+  text-align: right;
+  margin: 0 220px;
   color: white;
-  font-size:100px;
+  font-size: 100px;
+  position: fixed;
 }
+
 
 .container p {
-  margin: 0 80px; /* Remove default margin for <p> */
+  margin: 0 20px; /* Add margin for better readability */
   color: white;
-  font-size: 24px; /* Adjust font size as needed */
-  line-height: 1.6; /* Adjust line height as needed */
-  text-align: left; /* Use text-align instead of float */
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 32px;
+  line-height: 1.6;
+  text-align: left;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-h2 {
-  text-align: center;
-  font-style: normal;
-  font-size: 3em;
+.opaque-overlay {
+  position: absolute; /* Change position to absolute */
+  top: 0;
+  left: 50%; /* Adjusted to center the overlay */
+  width: 40%; /* Adjusted to a smaller width */
+  background: rgba(255, 255, 255, 1);
+  z-index: 2;
+  /* transform: translateX(-50%); Center the overlay horizontally */
 }
 
-h3 {
-  text-align: center;
-  font-style: normal;
-  font-size: 2em;    
+.container::-webkit-scrollbar {
+  width: 5px; /* Set the width of the scrollbar */
 }
 
-.p5-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex; 
-  justify-content: center; 
-  align-items: center;
+.container::-webkit-scrollbar-thumb {
+  background-color: rgba(20, 20, 20, 0.5); /* Set the color of the scrollbar thumb */
+  border-radius: 2px; /* Optional: Add rounded corners to the thumb */
 }
 
-.imagecontainer {
-  margin: 50px;
-  display: flex;
-  justify-content: center; /* Center content horizontally */
-  align-items: center; /* Center content vertically */
-  text-align: center;
-}
-
-.imagecontainer img {
-  width: 100%; /* Make sure the images take the full width of their container */
-  display: block; /* Remove any extra spacing below the images */
-  margin: 0 auto; /* Center the images horizontally */
-}
-
-.container img {
-  margin:0 10px;
-}
-.container pc {
-  font-size:18px;
-  line-height:1.8;
-  margin:0px;
-  text-align:left;
-  float:left;
-}
-
-.columncontainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin: 0 100px
-}
-
-.newcolumncontainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin: 0 200px
-}
-
-.column {
-  width: 48%; 
-  margin: 0
-}
-
-.narrow-column {
-  width: 38%; 
-  margin-bottom: 20px; 
-  box-sizing: border-box; 
-}
-
-.wide-column {
-  width: 56%; 
-  margin-bottom: 20px; 
-  box-sizing: border-box; 
+.container::-webkit-scrollbar-track {
+  background-color: transparent; /* Set the color of the scrollbar track */
 }
