--- a/style/main.css
+++ b/style/main.css
@@ -45,8 +45,8 @@ body {
   align-items: flex-end;
   text-align: left;
   position: fixed;
-  width: 30%; /* Adjusted width to 30% */
-  right: 10%; /* Increased right margin to 10% */
+  width: 35%; /* Adjusted width to 30% */
+  right: 15%; /* Increased right margin to 10% */
   top: 0;
   height: 100%;
   overflow-y: auto; /* Allow scrolling within the container */
@@ -56,29 +56,46 @@ body {
 
 .sticky-header h1 {
   text-align: left;
-  margin: 0 80px;
+  margin: 0 60px;
   color: white;
-  font-size: 100px;
+  font-size: 80px;
   position: fixed;
 }
 
 
 .container p {
-  margin: 0 20px; /* Add margin for better readability */
+  margin: 0 80px; /* Add margin for better readability */
+  padding: 20px;
   color: white;
   font-size: 32px;
   line-height: 1.6;
   text-align: left;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: relative;
+}
+
+.container p::before {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  width: calc(100% + 40px);
+  height: calc(100% + 40px);
+  background: rgba(32, 32, 32, 0.9); /* Adjust the color and opacity as needed */
+  z-index: -1; /* Place the overlay behind the text */
+}
+
+.container p.exclude-box::before {
+  content: none; /* Exclude the box for paragraphs with the "exclude-box" class */
 }
 
 .opaque-overlay {
-  position: absolute; /* Change position to absolute */
+  position: fixed; /* Change position to absolute */
   top: 0;
   left: 50%; /* Adjusted to center the overlay */
   width: 40%; /* Adjusted to a smaller width */
   background: rgba(255, 255, 255, 1);
-  z-index: 2;
+  z-index: 3;
   /* transform: translateX(-50%); Center the overlay horizontally */
 }
 
