--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,18 @@
+@font-face {
+  font-family: 'Gluten';
+  src: url('fonts/Gluten.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'GillSans';
+  src: url('fonts/GillSans.ttf') format('truetype');
+}
+
 body {
   padding: 20px;
-  margin: 20px;
+  margin: 0;
   background-color: #000;
-  font-family: "Gluten", "Open Sans", sans-serif;
+  font-family: 'Gluten', 'Open Sans', sans-serif;
   font-style: normal;
   color: white;
   font-weight: 300;
@@ -22,22 +32,13 @@ body {
 }
 
 .sticky-header {
-  /* background-color: #000; */
   color: #fff;
   padding: 200px;
-  width: 20%;
+  width: 100%;
   position: fixed;
-  top: 10px; /* Add 'px' for top property */
-  left: 0;   /* Set the left property to 0 to make it go to the left */
+  top: 0;
+  left: 0;
 }
-
-/* main {
-  flex: 1;
-  padding: 20px;
-  height: 100vh;
-  background-color: #000;
-  margin-right: 30%;
-} */
 
 .container {
   display: flex;
@@ -53,15 +54,34 @@ body {
   z-index: 3;
 }
 
-
 .sticky-header h1 {
   text-align: left;
-  margin: 0 60px;
+  margin: 0 20px;
   color: white;
   font-size: 80px;
   position: fixed;
 }
 
+.sticky-header p {
+  text-align: left;
+  margin: 90px 20px 20px 720px;
+  color: white;
+  font-size: 16px;
+  line-height: 1.3;
+  position: fixed;
+}
+
+.sticky-header button {
+  margin: 0px 0px 0px 20px;
+  padding: 30px 20px;
+  background-color: #000000;
+  color: #fff;
+  border: 3px dashed #fff; /* Add dashed border */
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Gluten', 'Open Sans', sans-serif;
+  font-size:20px;
+}
 
 .container p {
   margin: 0 80px; /* Add margin for better readability */
@@ -70,7 +90,7 @@ body {
   font-size: 32px;
   line-height: 1.6;
   text-align: left;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gluten', 'Open Sans', sans-serif; /* Use the 'Gluten' font */
   position: relative;
 }
 
@@ -97,7 +117,6 @@ body {
   width: 40%; /* Adjusted to a smaller width */
   background: rgba(255, 255, 255, 1);
   z-index: 3;
-  /* transform: translateX(-50%); Center the overlay horizontally */
 }
 
 .container::-webkit-scrollbar {
@@ -112,3 +131,66 @@ body {
 .container::-webkit-scrollbar-track {
   background-color: transparent; /* Set the color of the scrollbar track */
 }
+
+
+.overlay {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.popup {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 90%; /* Adjust the maximum width as needed */
+  max-height: 90%; /* Adjust the maximum height as needed */
+  overflow: auto; /* Enable scrolling if content exceeds the maximum height */
+}
+
+.popup-box button {
+  display: block;
+  margin: 20px auto;
+  padding: 30px 20px;
+  background-color: #fff;
+  color: #000;
+  border: 3px dashed #000; /* Add dashed border */
+  border-radius: 5px; 
+  cursor: pointer;
+  font-family: 'Gluten', 'Open Sans', sans-serif;
+  font-size:20px;
+}
+
+.popup-box {
+  position: fixed;
+  top:50%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.popup-box p {
+  color:#000000;
+  font-size: 20px;
+  line-height:1.3;
+  font-family:"GillSans";
+}
+
+.popup-box h2 {
+  margin-top: 20px;
+  color:#000000;
+  font-size: 40px;
+  font-family: 'Gluten', 'Open Sans', sans-serif;
+}
+
