--- a/style/main.css
+++ b/style/main.css
@@ -151,8 +151,8 @@ body {
   padding: 20px;
   border-radius: 10px;
   text-align: center;
-  max-width: 90%; /* Adjust the maximum width as needed */
-  max-height: 90%; /* Adjust the maximum height as needed */
+  max-width: 80%; /* Adjust the maximum width as needed */
+  max-height: 40%; /* Adjust the maximum height as needed */
   overflow: auto; /* Enable scrolling if content exceeds the maximum height */
 }
 
@@ -172,17 +172,17 @@ body {
 .popup-box {
   position: fixed;
   top:50%;
-  left: 60%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 20px;
+  padding: 70px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .popup-box p {
   color:#000000;
-  font-size: 20px;
+  font-size: 24px;
   line-height:1.3;
   font-family:"GillSans";
 }
@@ -190,7 +190,8 @@ body {
 .popup-box h2 {
   margin-top: 20px;
   color:#000000;
-  font-size: 40px;
+  font-size: 48px;
   font-family: 'Gluten', 'Open Sans', sans-serif;
+  line-height:1.2;
 }
 
