--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,10 @@
   src: url('fonts/GillSans.ttf') format('truetype');
 }
 
+main {
+  justify-content: left;
+}
+
 body {
   padding: 20px;
   margin: 0;
@@ -19,7 +23,7 @@ body {
   display: flex;
   align-items: top;
   text-align: left;
-  justify-content: center;
+  /* justify-content: center; */
   overflow: auto;
 }
 
@@ -166,7 +170,7 @@ body {
   border-radius: 5px; 
   cursor: pointer;
   font-family: 'Gluten', 'Open Sans', sans-serif;
-  font-size:20px;
+  font-size:1.6vw;
 }
 
 .popup-box {
@@ -182,7 +186,7 @@ body {
 
 .popup-box p {
   color:#000000;
-  font-size: 24px;
+  font-size: 1vw;
   line-height:1.3;
   font-family:"GillSans";
 }
@@ -190,7 +194,7 @@ body {
 .popup-box h2 {
   margin-top: 20px;
   color:#000000;
-  font-size: 48px;
+  font-size: 2vw;
   font-family: 'Gluten', 'Open Sans', sans-serif;
   line-height:1.2;
 }
